force-app/main/default/objects/FlexiPage_Cache__c/FlexiPage_Cache__c.object-meta.xml
<CustomObject>
    <label>FlexiPage Cache</label>
    <nameField>
        <label>Cache Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FlexiPage Caches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>