force-app/main/default/objects/FlexiPage_Cache__c/fields/API_Version__c.field-meta.xml
<CustomField>
    <fullName>API_Version__c</fullName>
    <defaultValue>"64.0"</defaultValue>
    <label>API Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>