force-app/main/default/objects/FlexiPage_Cache__c/fields/Cache_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Cache_Created_Date__c</fullName>
    <label>Cache Created Date</label>
    <type>DateTime</type>
</CustomField>