force-app/main/default/objects/FlexiPage_Cache__c/fields/FlexiPage_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>FlexiPage_Developer_Name__c</fullName>
    <externalId>true</externalId>
    <label>FlexiPage Developer Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>