force-app/main/default/objects/FlexiPage_Cache__c/fields/FlexiPage_Id__c.field-meta.xml
<CustomField>
    <fullName>FlexiPage_Id__c</fullName>
    <label>FlexiPage Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>