force-app/main/default/objects/FlexiPage_Cache__c/fields/FlexiPage_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>FlexiPage_Last_Modified_Date__c</fullName>
    <label>FlexiPage Last Modified Date</label>
    <type>DateTime</type>
</CustomField>