force-app/main/default/objects/FlexiPage_Cache__c/fields/FlexiPage_Metadata_JSON__c.field-meta.xml
<CustomField>
    <fullName>FlexiPage_Metadata_JSON__c</fullName>
    <label>FlexiPage Metadata JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>